@startuml

title __UI's Class Diagram__\n


namespace ui {
  class ui.BGPanel {
      + BGPanel()
      + initializeMaze()
      + paintComponent()
  }


  class ui.GameMainFrame {
      - highScore : int
      - layeredPane : JLayeredPane
      - level : int
      - lives : int
      + GameMainFrame()
      + initializeGameMenu()
      + initializeLayout()
      + quitGame()
      + resumeGame()
      + showPauseMenu()
  }

  class ui.GamePanel {
      + GamePanel()
      + doDrawing()
      + initializeLabels()
      + initializeLayout()
      + keyPressed()
      + restartApplication()
      + resumeGame()
      + showGameOver()
      + paintComponent()
  }

  class ui.MenuPanel {
      + MenuPanel()
      + drawLayout()
      + paintComponent()
  }


  class ui.PausePanel {
      + PausePanel()
      + drawLayout()
      + keyPressed()
      + paintComponent()
  }
}



  ui.GameMainFrame o-- ui.BGPanel : bgPanel
  ui.GameMainFrame o-- ui.GamePanel : gamePanel
  ui.GameMainFrame o-- logic.MainFrameLogic : logic
  ui.GameMainFrame o-- ui.MenuPanel : menuPanel
  ui.GameMainFrame o-- ui.PausePanel : pausePanel
  ui.GamePanel o-- ui.GameMainFrame : frame
  ui.GamePanel o-- keylisteners.GameEventListener : gameEventListener
  ui.GamePanel o-- logic.GameLogic : logic
  ui.MenuPanel o-- ui.GameMainFrame : gameMainFrame
  ui.MenuPanel o-- logic.MenuLogic : logic
  ui.PausePanel o-- ui.GameMainFrame : gameMainFrame
  ui.PausePanel o-- keylisteners.PauseEventListener : pauseEventListener



@enduml
